--- a/all/scss/settings/_default.scss
+++ b/all/scss/settings/_default.scss
@@ -8,7 +8,7 @@
 //
 // @settings
 
-$mode: light;
+$mode: dark;
 
 $default-font-size:             16px !default;
 $default-line-height:           24px !default;
@@ -74,8 +74,8 @@ $defaults: (
 	'background': (
 		'dark': (
 			'color': $gray-900,
-			'alt':   $gray-800,
-			'item':  $white
+			'alt':   lighten($gray-900, 4%),
+			'item':  $gray-100
 		),
 		'light': (
 			'color': $white,
@@ -86,12 +86,12 @@ $defaults: (
 	'surface': (
 		'dark': (
 			'color': $gray-800,
-			'alt':   $gray-700,
+			'alt':   lighten($gray-800, 4%),
 			'item':  $gray-500
 		),
 		'light': (
 			'color': $gray-100,
-			'alt':   $gray-200,
+			'alt':   darken($gray-100, 4%),
 			'item':  $gray-600
 		)
 	),
@@ -105,7 +105,7 @@ $defaults: (
 	),
 	'shadow': (
 		'dark': (
-			'color': $white
+			'color': $black
 		),
 		'light': (
 			'color': $black
