--- a/all/scss/theme.scss
+++ b/all/scss/theme.scss
@@ -27,7 +27,7 @@
 // Copyright (c) 2015 Michael Miday
 //
 // Permission is hereby granted, free of charge, to any person obtaining a copy
-// of this software and associated documentation files (the "Software"), to
+// of this software and associated documentation files (the 'Software'), to
 // deal in the Software without restriction, including without limitation the
 // rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
 // sell copies of the Software, and to permit persons to whom the Software is
@@ -36,7 +36,7 @@
 // The above copyright notice and this permission notice shall be included in
 // all copies or substantial portions of the Software.
 //
-// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+// THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 // IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 // FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 // AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
@@ -76,7 +76,7 @@
 
 // 1. Global Settings
 //-------------------------
-@import "settings/settings";
+@import 'settings/settings';
 
 // Variables
 $o-bg-color: $default-action-bg !default;
@@ -90,14 +90,14 @@ $o-disabled-color: lighten($o-color, 8%) !default;
 
 // 2. Tools
 //-------------------------
-@import "tools/function/functions";
-@import "tools/mixin/mixins";
+@import 'tools/function/functions';
+@import 'tools/mixin/mixins';
 
 
 // 4. Base
 //-------------------------
 html {
-	background-color: $default-background-color;
+	background-color: darken($default-background-color, 4%);
 	color: $default-background-item-color;
 }
 
@@ -105,20 +105,20 @@ section {
 	margin: 0 0 1.5rem;
 }
 
-[type="date"],
-[type="datetime"],
-[type="datetime-local"],
-[type="email"],
-[type="month"],
-[type="number"],
-[type="password"],
-[type="search"],
-[type="tel"],
-[type="text"],
-[type="time"],
-[type="url"],
-[type="week"],
-[type="color"],
+[type='date'],
+[type='datetime'],
+[type='datetime-local'],
+[type='email'],
+[type='month'],
+[type='number'],
+[type='password'],
+[type='search'],
+[type='tel'],
+[type='text'],
+[type='time'],
+[type='url'],
+[type='week'],
+[type='color'],
 select,
 textarea {
 	background-color: $o-bg-color;
@@ -143,7 +143,7 @@ select {
 	}
 }
 
-[type="checkbox"] {
+[type='checkbox'] {
 	+ label {
 		&:before {
 			border-color: $o-bg-hover-color;
@@ -173,7 +173,7 @@ select {
 	}
 }
 
-[type="radio"] {
+[type='radio'] {
 	&:not(:checked) + label {
 		&:before,
 		&:after {
@@ -251,6 +251,7 @@ select {
 		}
 
 		&-feild {
+			background: transparent;
 			color: $o-color;
 		}
 	}
@@ -300,26 +301,43 @@ select {
 
 // 6. Components
 //-------------------------
-@import "components/paging";
-@import "components/forum";
-@import "components/topic";
-@import "components/post";
-@import "components/profile";
-@import "components/menu";
-@import "components/notification";
-@import "components/drawer";
-@import "components/tab";
-@import "components/stat";
-@import "components/crumbs";
-@import "components/toolbar";
-@import "components/tooltip";
-@import "components/hero";
-@import "components/footer";
-@import "components/warning";
+@import 'components/paging';
+@import 'components/forum';
+@import 'components/topic';
+@import 'components/post';
+@import 'components/profile';
+@import 'components/menu';
+@import 'components/notification';
+@import 'components/drawer';
+@import 'components/tab';
+@import 'components/stat';
+@import 'components/crumbs';
+@import 'components/toolbar';
+@import 'components/tooltip';
+@import 'components/hero';
+@import 'components/footer';
+@import 'components/warning';
 
 
 // 7. Theme
 //-------------------------
+
+.t-navbar {
+	background-color: $default-background-color;
+
+	&-action {
+		color: $o-color;
+
+		&:hover,
+		&:focus {
+			background-color: $default-background-alt-color;
+		}
+	}
+}
+
+.t-crumbs-container {
+	background-color: $default-background-color;
+}
 
 .t-forum-page-title {
 	@include type(headline4);
